# all-o-stasis-avers

./: LICENSE  README.mkd  netlify.toml
.github/: dependabot.yml
api/: .gitignore  Dockerfile  LICENSE  all-o-stasis.cabal  package.yaml  stack.yaml
api/config/: local.yaml
api/script/: bootstrap  console  deploy  server
api/src/: Authorization.hs  Config.hs  Main.hs  PassportAuth.hs  PassportConfirmationEmail.hs  Queries.hs  Revision.hs  Routes.hs  Session.hs  Types.hs  Wordlist.hs
api/src/Config/: Types.hs
api/src/Storage/: ObjectTypes.hs
api/src/Storage/Objects/: Account.hs  Activity.hs  Boulder.hs  Passport.hs
api/src/Storage/Objects/Account/: Types.hs
api/src/Storage/Objects/Activity/: Types.hs
api/src/Storage/Objects/Boulder/: Types.hs
api/src/Storage/Objects/Passport/: Types.hs
client/: .babelrc  .gitignore  babel.config.js  default.nix  global.d.ts  gulpfile.js  next.config.js  package-lock.json  package.json  shell.nix  tsconfig.json  tslint.json  webpack.config.js
client/assets/: app.css  index.html
client/assets/UI-Icon-master/: icon.css
client/config/: local.json  production.json
client/pages/: _app.tsx  _catalog.tsx  _document.tsx  account.tsx  boulder.tsx  email-confirmed.tsx  index.tsx  login.tsx  settings.tsx  stats.tsx  team.tsx
client/pages/admin/: accounts.tsx  boulders.tsx  data.tsx
client/script/: bootstrap  confgen  deploy  serve  server
client/src/: actions.ts  app.ts  env.ts  global.d.ts  main.ts  storage.ts  views.ts  views.tsx
client/src/Catalog/: App.ts
client/src/Components/: AdminBar.tsx  BoulderFrequencyDistribution.tsx  Button.doc.tsx  Button.tsx  GradeDistributionChart.doc.tsx  GradeDistributionChart.tsx  Input.doc.tsx  Input.tsx  Loader.tsx  NavBar.doc.tsx  NavBar.tsx  SectorDistributionChart.tsx  SetterBar.tsx  SetterBlock.tsx  SetterPicker.tsx
client/src/Components/Header/: Backdrop.tsx  Header.tsx  doc.tsx
client/src/Materials/: Colors.doc.tsx  Colors.ts  Typefaces.doc.tsx  Typefaces.ts
client/src/Views/: Account.ts  Account.tsx  Boulder.ts  Boulder.tsx  Catalog.tsx  EmailConfirmed.tsx  Home.ts  Home.tsx  Login.doc.tsx  Login.ts  Login.tsx  Sector.tsx  Settings.tsx  Signup.ts  Signup.tsx  Stats.tsx  Team.ts  Team.tsx  UpdateSecret.tsx
client/src/Views/Components/: BoulderId.tsx  (+29 more)
client/src/ext/: react-addons.d.ts
client/src/theme/: index.ts  options.ts
client/static/: app.css
script/: accounts.json  migrate_db.py
(+7 files in other folders)
