name:                all-o-stasis
version:             0.0.1
license-file:        LICENSE
author:              Yves Ineichen
maintainer:          iff@yvesineichen.com
build-type:          Simple
cabal-version:       >=1.10


executable all-o-stasis-api
    hs-source-dirs:      src
    default-language:    Haskell2010

    main-is:             Main.hs

    build-depends      : base
                       , avers
                       , snap
                       , directory
                       , aeson
                       , bytestring
                       , text
                       , time
                       , transformers
                       , mtl
                       , MonadCatchIO-transformers
                       , vector
                       , rethinkdb-client-driver
                       , unordered-containers
                       , network-uri
