name:                all-o-stasis
version:             0.0.1
license-file:        LICENSE
author:              Yves Ineichen
maintainer:          iff@yvesineichen.com
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    GIT-REVISION-FILE

executable all-o-stasis-api
    hs-source-dirs:      src
    default-language:    Haskell2010

    main-is:             Main.hs

    build-depends      : base
                       , avers
                       , avers-api
                       , avers-server
                       , cookie
                       , either
                       , servant
                       , servant-server
                       , directory
                       , aeson
                       , bytestring
                       , split
                       , text
                       , time
                       , transformers
                       , mtl
                       , vector
                       , random
                       , rethinkdb-client-driver
                       , unordered-containers
                       , template-haskell
                       , safe
                       , network-uri
                       , wai
                       , wai-extra
                       , wai-cors
                       , warp
                       , mime-mail
                       , http-conduit
